//
// PROJECT:         Aspia
// FILE:            proto/system_info_session.proto
// LICENSE:         GNU Lesser General Public License 2.1
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package proto.system_info;

message HostToClient
{
    enum Compressor
    {
        COMPRESSOR_RAW  = 0;
        COMPRESSOR_ZLIB = 1;
    }

    string guid           = 1;
    Compressor compressor = 2;
    bytes data            = 3;
}

message ClientToHost
{
    string guid = 1;
}
